Fix: fixed overflow problem on mobile screens

--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -69,7 +69,11 @@ body {
 *::before {
   box-sizing: inherit;
 }
+html,
 body {
+  background: #141925;
+}
+main {
   font-family: "Coolvetica", sans-serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
